vlib/v/checker/tests/ban_const_ref_mutation.vv
struct Foobar {
mut:
	foo int
}

const foobar_const = Foobar{123}

fn main() {
	println('foobar_const.foo: ${foobar_const.foo}') // foobar_const.foo: 123
	mut foobars := []&Foobar{}
	foobars << &foobar_const
	foobars[0].foo = 456
	println('foobar_const.foo: ${foobar_const.foo}') // foobar_const.foo: 456
}
